--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -1,3 +1,7 @@
 name: Automata
 main: MattTwoPointOh.Automata.AutomataPlugin
 version: __VERSION_MACRO__
+commands:
+  clearcarts:
+    description: Clears all minecarts.
+    usage: /command
