Cart moves, lays track, and digs... with hilarious results.

--- a/src/resources/plugin.yml
+++ b/src/resources/plugin.yml
@@ -5,3 +5,6 @@ commands:
   clearcarts:
     description: Clears all minecarts.
     usage: /command
+  clearrails:
+    description: Clears all minecart rails.
+    usage: /command
